web-infras/parser/tests/fixtures/babel/es2015/uncategorised/225/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,7)
2| isnt y
 |     ^
